Second phase red pen edits to end of chapter 4.

--- a/bib.bib
+++ b/bib.bib
@@ -78,15 +78,6 @@ url = {http://www.research.ibm.com/people/k/koved/papers/rc16446.html},
 volume = {1},
 year = {1992}
 }
-@article{Applin2012,
-abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
-author = {Applin, Sally A},
-journal = {Policy},
-number = {February},
-title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
-url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
-year = {2012}
-}
 @article{Applin2011,
 abstract = {Contribute to the workshop with our understanding of humans, culture and group behavior and to learn from others what type of group behavior is expected as new technologies and their subsequent experiences are created for human use. When we discuss human group behavior, we refer to the definition of a social group: a collection of humans who repeatedly interact within a system. Humans can, and do switch context between environments and blend traces of one into the other in a socially unconscious manner often seemingly simultaneously. We propose that the cultures and behaviors of humans are increasingly actively permeating Internet and network- based applications, as well as those that are geolocal. With the future Internet of things, Dual Reality and Mixed Reality, the opportunity for humans to extend their own blended reality, as well as to create new ones is unfolding. That said, because humans interact within groups, the multiplexing of their mutual blended realities rapidly creates a PoSR. Sorting out the relationships between realities as well as between synchronous and asynchronous time and geolocal space can create a condition where realities are simultaneous and the idea of 'x' can be perceived as equaling 'not x.' We explore this new type of interoperability between virtual and physical, ideational and material, representations and objects and culture.},
 author = {Applin, Sally A},
@@ -96,6 +87,15 @@ pages = {11--14},
 title = {{A Cultural Perspective on Mixed , Dual and Blended Reality}},
 url = {http://www.anthropunk.com/xwiki/wiki/anthropunk/download/Main/WebHome/ACulturalPerspectiveApplinFischer.pdf},
 year = {2011}
+}
+@article{Applin2012,
+abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
+author = {Applin, Sally A},
+journal = {Policy},
+number = {February},
+title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
+url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
+year = {2012}
 }
 @article{Applin2011a,
 abstract = {We consider some possible broad changes that may impact society as a whole as a result of widespread integration of full-spectrum deployed pervasive computing technologies. Our approach considers design challenges for successfully developing and integrating pervasive technologies into culture and society. This is particularly challenging, since pervasive technologies as services are most successful when transparent, invisible, overlooked, unacknowledged and seemingly forgotten by the very groups that embrace their usage and development. We suggest a heuristic for understanding pervasive technology from an anthropological/social perspective, along with a reminder that humans create, shape and use the technologies that affect them. In particular, we look at the impact on social relations in a poly-social world where people must develop means to blend their own realities with those of of others. In conclusion, we remind those developing these technologies, that although we will eventually become wedded and intertwined as cyborgs within this new environment, it may have a positive outcome, creating new social group models for human interaction.},
@@ -834,6 +834,14 @@ title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
 urldate = {2013-04-01}
 }
+@inproceedings{Davies2012,
+abstract = {Virtual worlds have proven popular in academia as extensible multi-user 3D virtual environments capable of hosting a wide range of experimental scenarios. One of the products of virtual worlds research is the cross reality paradigm; the fusion of ubiquitous sensor/actuator infrastructure and virtual worlds facilitating synchronous bidirectional intercommunication between real and virtual environments, allowing each to reflect, influence and merge with the other. We introduce the ongoing Virtual Time Window project, an application of cross reality to the domain of cultural heritage, that promises to further existing alternate reality work in the field by allowing simultaneous exploration of real and virtual environments; visitors to a cultural heritage site can simultane- ously explore its virtual reconstruction via a tablet computer. Unlike previous augmented reality and virtual reality projects in the field, the virtual reconstruction is also accessible to persons remote to the real site, affording intriguing interactions between visitors at the site and those exploring it from elsewhere.},
+author = {Davies, C J and Miller, Alan and Allison, Colin},
+booktitle = {Proceedings of the Postgraduate Conference on the Convergence of Networking and Telecomunications},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Davies, Miller, Allison - 2012 - Virtual Time Windows Applying Cross Reality to Cultural Heritage(2).pdf:pdf},
+title = {{Virtual Time Windows : Applying Cross Reality to Cultural Heritage}},
+year = {2012}
+}
 @article{Davies2014,
 author = {Davies, C J and Miller, Alan and Allison, Colin},
 file = {:home/cj/Downloads/vrst.pdf:pdf},
@@ -842,14 +850,6 @@ journal = {Proceedings of the 20th ACM Symposium on Virtual Reality Software and
 keywords = {cross reality,head mounted display,indoor positioning},
 title = {{A View from the Hill : Where Cross Reality Meets Virtual Worlds}},
 year = {2014}
-}
-@inproceedings{Davies2012,
-abstract = {Virtual worlds have proven popular in academia as extensible multi-user 3D virtual environments capable of hosting a wide range of experimental scenarios. One of the products of virtual worlds research is the cross reality paradigm; the fusion of ubiquitous sensor/actuator infrastructure and virtual worlds facilitating synchronous bidirectional intercommunication between real and virtual environments, allowing each to reflect, influence and merge with the other. We introduce the ongoing Virtual Time Window project, an application of cross reality to the domain of cultural heritage, that promises to further existing alternate reality work in the field by allowing simultaneous exploration of real and virtual environments; visitors to a cultural heritage site can simultane- ously explore its virtual reconstruction via a tablet computer. Unlike previous augmented reality and virtual reality projects in the field, the virtual reconstruction is also accessible to persons remote to the real site, affording intriguing interactions between visitors at the site and those exploring it from elsewhere.},
-author = {Davies, C J and Miller, Alan and Allison, Colin},
-booktitle = {Proceedings of the Postgraduate Conference on the Convergence of Networking and Telecomunications},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Davies, Miller, Allison - 2012 - Virtual Time Windows Applying Cross Reality to Cultural Heritage(2).pdf:pdf},
-title = {{Virtual Time Windows : Applying Cross Reality to Cultural Heritage}},
-year = {2012}
 }
 @inproceedings{Davies2013,
 abstract = {Widespread adoption of smartphones and tablets has enabled people to multiplex their physical reality, where they engage in face-to-face social interaction, with Web-based social networks and apps, whilst emerging 3D Web technologies hold promise for networks of parallel 3D virtual environments to emerge. Although current technologies allow this multiplexing of physical reality and 2D Web, in a situation called PolySocial Reality, the same cannot yet be achieved with 3D content. Cross Reality was proposed to address this issue; however so far it has focused on the use of fixed links between physical and virtual environments in closed lab settings, limiting investigation of the explorative and social aspects. This paper presents an architecture and implementation that addresses these shortcomings using a tablet computer and the Pangolin virtual world viewer to provide a mobile interface to a corresponding 3D virtual environment. Motivation for this project stemmed from a desire to enable students to interact with existing virtual reconstructions of cultural heritage sites in tandem with exploration of the corresponding real locations, avoiding the adverse temporal separation caused otherwise by interacting with the virtual content only within the classroom. The accuracy of GPS tracking emerged as a constraint on this style of interaction.},
@@ -1179,6 +1179,13 @@ pages = {256},
 title = {{Mirror Worlds: or the Day Software Puts the Universe in a Shoebox...How It Will Happen and What It Will Mean}},
 year = {1993}
 }
+@misc{Gelissen2008,
+author = {Gelissen, Jean},
+publisher = {International Organization for Standardization},
+title = {{Summary of MPEG-V}},
+url = {http://mpeg.chiariglione.org/working\_documents.php},
+year = {2008}
+}
 @article{Gelissen2009,
 annote = {        From Duplicate 1 (                           Introduction to MPEG-V                         - Gelissen, Jean )
                 
@@ -1196,13 +1203,6 @@ title = {{Introduction to MPEG-V}},
 url = {http://journals.tdl.org/jvwr/article/view/742/533},
 volume = {2},
 year = {2009}
-}
-@misc{Gelissen2008,
-author = {Gelissen, Jean},
-publisher = {International Organization for Standardization},
-title = {{Summary of MPEG-V}},
-url = {http://mpeg.chiariglione.org/working\_documents.php},
-year = {2008}
 }
 @article{Gelissen2011,
 abstract = {In this issue, we report on the first phase of MPEG-V, a work that started in 2007. MPEG-V was conceived as a unified effort to develop standards within virtual worlds, and between virtual worlds and real worlds. This work culminated in the publication of the ISO/IEC MPEG-V 'Media context and control' standards in January 2011. The papers in this issue of the Journal of Virtual World Research expose both the many current standards for virtual worlds, as well as the many missing standards. As such, the issue hints at many more places where standards are needed. To fulfill the potential of virtual worlds much more standardization (MPEG-V, and other standards) is needed.},
@@ -1378,7 +1378,7 @@ title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-03-31}
 }
-@misc{Haverinen2009,
+@inproceedings{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
 author = {Haverinen, J and Kemppainen, A},
 booktitle = {Proceedings of the IEEE International Conference on Robotics and Automation (2009)},
@@ -1407,6 +1407,16 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0921889009001092},
 volume = {57},
 year = {2009}
 }
+@article{Heeter2003,
+abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
+author = {Heeter, Carrie},
+journal = {Presence: Teleoperators and Virtual Environments},
+number = {4},
+pages = {335--345},
+title = {{Reflections on Real Presence by a Virtual Person}},
+volume = {12},
+year = {2003}
+}
 @article{Heeter1992,
 abstract = {What do you feel when you enter a virtual world? What creates the experience of presence? What factors contribute to making you feel like you are there1 ?},
 author = {Heeter, Carrie},
@@ -1420,16 +1430,6 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
-}
-@article{Heeter2003,
-abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
-author = {Heeter, Carrie},
-journal = {Presence: Teleoperators and Virtual Environments},
-number = {4},
-pages = {335--345},
-title = {{Reflections on Real Presence by a Virtual Person}},
-volume = {12},
-year = {2003}
 }
 @article{Heim1998,
 abstract = {"Virtual Realism" is an art form and a way of living with technology. To explain the concept, the author begins with the conflict inherent in the philosophy of technology (Unabomber and the computer culture). The article draws on interactive art, software engineering, and popular culture to clarify the issue of lifestyles. Twelve suggestions are made to develop a harmony of technology and lifestyle. The article is a chapter in a book by the same title (Oxford U. Press, 1998)>},
@@ -1519,6 +1519,20 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {2013-03-28},
 year = {2013}
 }
+@misc{Hughes2009,
+author = {Hughes, Ian},
+title = {{Wimbledon – A fanployee perspective}},
+url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
+urldate = {2012-05-21},
+year = {2009}
+}
+@misc{Hughes2006c,
+author = {Hughes, Ian},
+title = {{Wimbledon in Second Life}},
+url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
+urldate = {2012-05-21},
+year = {2006}
+}
 @misc{Hughes2006a,
 author = {Hughes, Ian},
 title = {{Second Life – Outside in}},
@@ -1537,20 +1551,6 @@ year = {2006}
 author = {Hughes, Ian},
 title = {{Lessons from second life}},
 url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
-year = {2006}
-}
-@misc{Hughes2009,
-author = {Hughes, Ian},
-title = {{Wimbledon – A fanployee perspective}},
-url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
-urldate = {2012-05-21},
-year = {2009}
-}
-@misc{Hughes2006c,
-author = {Hughes, Ian},
-title = {{Wimbledon in Second Life}},
-url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
-urldate = {2012-05-21},
 year = {2006}
 }
 @misc{Hunt,
@@ -1703,17 +1703,14 @@ title = {{DoppelLab: Spatialized Data Sonification in a 3D Virtual Environment}}
 year = {2013}
 }
 @book{Jones2006,
-abstract = {Here, artists and writers reconsider the relationship between the body and electronic technology in the twenty-first century through essays, artworks, and an encyclopedic Abecedarius of the New Sensorium. The relationship between the body and electronic technology, extensively theorized through the 1980s and 1990s, has reached a new technosensual comfort zone in the early twenty-first century. In Sensorium, contemporary artists and writers explore the implications of the techno-human interface. Ten artists, chosen by an international team of curators, offer their own edgy investigations of embodied technology and the technologized body. These range from Matthieu Briand's experiment in controlled schizophrenia and Janet Cardiff and Georges Bures Miller's uneasy psychological soundscapes to Bruce Nauman's uncanny night visions and Francois Roche's destabilized architecture. The art in Sensorium - which accompanies an exhibition at the MIT List Visual Arts Center - captures the aesthetic attitude of this hybrid moment, when modernist segmentation of the senses is giving way to dramatic multisensory mixes or transpositions. Artwork by each artist appears with an analytical essay by a curator, all of it prefaced by an anchoring essay on The Mediated Sensorium by Caroline Jones. In the second half of Sensorium, scholars, scientists, and writers contribute entries to an Abecedarius of the New Sensorium. These short, playful pieces include Bruno Latour on Air, Barbara Maria Stafford on Hedonics, Michel Foucault (from a little-known 1966 radio lecture) on the Utopian Body, Donna Haraway on Compoundings, and Neal Stephenson on the Viral. Sensorium is both forensic and diagnostic, viewing the culture of the technologized body from the inside, by means of contemporary artists' provocations, and from a distance, in essays that situate it historically and intellectually.},
 author = {Jones, Caroline A},
-booktitle = {Access},
 doi = {10.1093/llc/fqn008},
 isbn = {0262101173},
 issn = {0268-1145},
 pages = {268},
 pmid = {14318938},
+publisher = {The MIT Press},
 title = {{Sensorium: Embodied Experience, Technology, and Contemporary Art}},
-url = {http://www.amazon.com/dp/0262101173},
-volume = {23},
 year = {2006}
 }
 @article{Jovanova2009,
@@ -2110,18 +2107,6 @@ title = {{The digital Michelangelo project: 3D scanning of large statues}},
 url = {http://dl.acm.org/citation.cfm?id=344779.344849 http://dx.doi.org/10.1145/344779.344849},
 year = {2000}
 }
-@inproceedings{Liestøl2009,
-abstract = {In digital media - including augmented reality research - rapid change continue to take place at the levels of hardware and software. This paper focus on a third layer in a hierarchy of digital media - meaningware. Meaningware is the domain of digital textuality, its genres and conventions - all key subject matters of the humanities. To prevent cultural lag at the textual level the conduct of genre design is suggested as a methodological approach. The potential 'genre' experimented with here is a type of augmented reality system we have named Situated Simulations. The system takes advantage of the convergence of mobility, broadband, rich graphics capabilities and positioning/orientation technologies, on off the shelf mobile phones. The current platform applied is Apple's iPhone. The paper describes the development of three prototyped situated simulations designed for use in both learning and tourism. Interface and design issues are discussed, and a perspective on the epistemological increment of augmented reality and situated simulations is related to Bateson's notion of double descriptions.},
-author = {Liest$\backslash$o l, Gunnar},
-booktitle = {Arts, Media and Humanities Proceedings - IEEE 2009 International Symposium on Mixed and Augmented Reality, ISMAR-AMH 2009},
-doi = {10.1109/ISMAR-AMH.2009.5336730},
-file = {:external2/Situated Simulations (SitSim)/01 Augmented reality and digital genre design — Situated simulations on the iPhone.pdf:pdf},
-isbn = {9781424455089},
-keywords = {Augmented reality,Digital genre design,Meaningware,Situated simulation,iPhone},
-pages = {29--34},
-title = {{Augmented reality and digital genre design - Situated simulations on the iPhone}},
-year = {2009}
-}
 @incollection{Liestøl2012,
 author = {Liest\o l, Gunnar},
 booktitle = {Progress in Cultural Heritage Preservation},
@@ -2133,6 +2118,18 @@ publisher = {Springer Berlin Heidelberg},
 title = {{Solving the Centre–Periphery Problem in Cultural Heritage by Means of Situated Simulations}},
 url = {http://link.springer.com/chapter/10.1007/978-3-642-34234-9\_64},
 year = {2012}
+}
+@inproceedings{Liestøl2009,
+abstract = {In digital media - including augmented reality research - rapid change continue to take place at the levels of hardware and software. This paper focus on a third layer in a hierarchy of digital media - meaningware. Meaningware is the domain of digital textuality, its genres and conventions - all key subject matters of the humanities. To prevent cultural lag at the textual level the conduct of genre design is suggested as a methodological approach. The potential 'genre' experimented with here is a type of augmented reality system we have named Situated Simulations. The system takes advantage of the convergence of mobility, broadband, rich graphics capabilities and positioning/orientation technologies, on off the shelf mobile phones. The current platform applied is Apple's iPhone. The paper describes the development of three prototyped situated simulations designed for use in both learning and tourism. Interface and design issues are discussed, and a perspective on the epistemological increment of augmented reality and situated simulations is related to Bateson's notion of double descriptions.},
+author = {Liest\o l, Gunnar},
+booktitle = {Arts, Media and Humanities Proceedings - IEEE 2009 International Symposium on Mixed and Augmented Reality, ISMAR-AMH 2009},
+doi = {10.1109/ISMAR-AMH.2009.5336730},
+file = {:external2/Situated Simulations (SitSim)/01 Augmented reality and digital genre design — Situated simulations on the iPhone.pdf:pdf},
+isbn = {9781424455089},
+keywords = {Augmented reality,Digital genre design,Meaningware,Situated simulation,iPhone},
+pages = {29--34},
+title = {{Augmented reality and digital genre design - Situated simulations on the iPhone}},
+year = {2009}
 }
 @incollection{Liestøl2011,
 author = {Liest\o l, Gunnar},
@@ -2175,6 +2172,13 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {2012-05-21},
 year = {2006}
 }
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
+}
 @phdthesis{Lifton2007a,
 address = {Department of Media Arts and Sciences},
 annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
@@ -2215,16 +2219,8 @@ title = {{Consumer Adoption of Cross Reality Systems}},
 url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
 year = {2010}
 }
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
-annote = {Paper about the Plug sensor/actuator platform developed by the Media Lab for Lifton's research. Published before Lifton's PhD so doesn't contain as much information as the PhD does about Plug \& its uses.},
 author = {Lifton, Joshua and Feldmeier, Mark and Ono, Yasuhiro and Lewis, Cameron and Paradiso, Joseph A.},
 booktitle = {Proceedings of the 6th international conference on Information processing in sensor networks - IPSN '07},
 doi = {10.1145/1236360.1236377},
@@ -2512,7 +2508,7 @@ url = {http://news.bbc.co.uk/1/hi/technology/6251585.stm},
 urldate = {2012-05-21},
 year = {2007}
 }
-@misc{Mautz2009,
+@inproceedings{Mautz2009,
 abstract = {This paper gives an overview of the current and near future positioning capabilities for indoor environments with focus on the research activities in that field at the Institute of Geodesy and Photogrammetry at the ETH Zurich. Object of study are those novel indoor-position systems that have the potential to achieve cm-level accuracy or better which is seen as a requirement for most geodetic applications. The focus is given on four alternative positioning systems where the GeomETH group at the ETH Zurich has made some experiences. These systems are iGPS, which is a system based on a rotating infrared laser fan, the Locata system that uses GNSS similar signals on pseudolites, the cricket ultra-sound system and a photogrammetric laser beam positioning systems (CLIPS) that is currently under development. As a result it can be noted that there are several unconventional positioning systems on their way that may compensate for the deficiencies of GNSS or total stations.},
 author = {Mautz, R},
 booktitle = {2009 6th Workshop on Positioning Navigation and Communication},
@@ -2761,12 +2757,6 @@ url = {https://journals.tdl.org/jvwr/article/view/660/536},
 volume = {2},
 year = {2009}
 }
-@misc{OpenGeospatialConsortium,
-annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
-author = {{Open Geospatial Consortium}, Inc.},
-title = {{OWS-4 Demonstration}},
-url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
-}
 @misc{OpenGeospatialConsortiuma,
 annote = {        From Duplicate 1 (                           Welcome to the GSN Project                         - Open Geospatial Consortium, Inc. )
                 
@@ -2777,6 +2767,12 @@ author = {{Open Geospatial Consortium}, Inc.},
 howpublished = {$\backslash$url\{http://sourceforge.net/apps/trac/gsn/\}},
 title = {{Welcome to the GSN Project}},
 url = {http://sourceforge.net/apps/trac/gsn/}
+}
+@misc{OpenGeospatialConsortium,
+annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
+author = {{Open Geospatial Consortium}, Inc.},
+title = {{OWS-4 Demonstration}},
+url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
 }
 @misc{OpenVirtualWorldsgroupSchoolofComputerScience,
 author = {{Open Virtual Worlds group, School of Computer Science}, University of St Ancrews},
@@ -3188,14 +3184,6 @@ title = {{Responsive Environments Group - Research Themes}},
 url = {http://resenv.media.mit.edu/motto.html},
 urldate = {2012-05-18}
 }
-@book{Rheingold1992,
-author = {Rheingold, Howard},
-isbn = {978-0671778972},
-pages = {416},
-publisher = {Simon \& Schuster},
-title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
-year = {1992}
-}
 @book{Rheingold2000,
 address = {Cambridge, MA},
 author = {Rheingold, Howard},
@@ -3205,6 +3193,14 @@ pages = {447},
 publisher = {The MIT Press},
 title = {{The Virtual Community: Homesteading on the Electronic Frontier}},
 year = {2000}
+}
+@book{Rheingold1992,
+author = {Rheingold, Howard},
+isbn = {978-0671778972},
+pages = {416},
+publisher = {Simon \& Schuster},
+title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
+year = {1992}
 }
 @inproceedings{Richardson2004,
 address = {New York, New York, USA},
@@ -3805,6 +3801,16 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
+@incollection{Turkle2004,
+author = {Turkle, Sherry},
+booktitle = {Community in the Digital Age: Philosophy and Practice},
+chapter = {6},
+editor = {Feenberg, Andrew and Barney, Darin},
+pages = {101--117},
+publisher = {Rowman \& Littlefield},
+title = {{Our Split Screens}},
+year = {2004}
+}
 @book{Turkle2011,
 author = {Turkle, Sherry},
 pages = {384},
@@ -3820,16 +3826,6 @@ pages = {354},
 publisher = {Simon \& Schuster},
 title = {{Life on the Screen}},
 year = {1997}
-}
-@incollection{Turkle2004,
-author = {Turkle, Sherry},
-booktitle = {Community in the Digital Age: Philosophy and Practice},
-chapter = {6},
-editor = {Feenberg, Andrew and Barney, Darin},
-pages = {101--117},
-publisher = {Rowman \& Littlefield},
-title = {{Our Split Screens}},
-year = {2004}
 }
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
