Second phase red pen edits to 6.5.

--- a/bib.bib
+++ b/bib.bib
@@ -3344,13 +3344,13 @@ title = {{Embodied presence in virtual environments}},
 url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
 year = {1999}
 }
-@misc{Schubert2001,
+@article{Schubert2001,
 abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
 author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
-booktitle = {Presence: Teleoperators and Virtual Environments},
 doi = {10.1162/105474601300343603},
 isbn = {1054-7460},
 issn = {1054-7460},
+journal = {Presence: Teleoperators and Virtual Environments},
 number = {3},
 pages = {266--281},
 pmid = {18368863},
